Responsive Modern Restaurant  Website -Design By Bedimcode

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="assets/css/styles.css" />
 
-    <title>Resto | App</title>
+    <title>Rest-Orient | App</title>
   </head>
   <body>
     <!--========== SCROLL TOP ==========-->
@@ -24,7 +24,7 @@
     <!--========== HEADER ==========-->
     <header class="l-header" id="header">
       <nav class="nav bd-container">
-        <a href="#" class="nav__logo">Rest-o-Rent</a>
+        <a href="#" class="nav__logo">Rest-Orient</a>
 
         <div class="nav__menu" id="nav-menu">
           <ul class="nav__list">
